--- a/index.html
+++ b/index.html
@@ -1,1 +1,71 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Arjun Verma | Data Analyst</title>
+  <link rel="stylesheet" href="style.css" />
+</head>
+<body>
+
+  <!-- HERO SECTION -->
+  <header class="hero">
+    <h1>Arjun Verma</h1>
+    <h2>Data Analyst</h2>
+    <p>Turning data into actionable business insights</p>
+    <a href="#projects" class="btn">View Projects</a>
+  </header>
+
+  <!-- ABOUT -->
+  <section class="about">
+    <h2>About Me</h2>
+    <p>
+      I am an aspiring Data Analyst skilled in SQL, Excel, Tableau, and Power BI,
+      with hands-on experience in sales, HR, and food delivery analytics.
+    </p>
+  </section>
+
+  <!-- SKILLS -->
+  <section class="skills">
+    <h2>Skills</h2>
+    <ul>
+      <li>SQL</li>
+      <li>Excel</li>
+      <li>Tableau</li>
+      <li>Power BI</li>
+      <li>Data Analysis</li>
+      <li>Data Visualization</li>
+    </ul>
+  </section>
+
+  <!-- PROJECTS -->
+  <section id="projects" class="projects">
+    <h2>Projects</h2>
+
+    <div class="project-card">
+      <h3>Food Delivery Analytics</h3>
+      <p>Analyzed delivery efficiency and customer trends using SQL and Tableau.</p>
+    </div>
+
+    <div class="project-card">
+      <h3>E-Commerce Sales Analytics</h3>
+      <p>Identified revenue trends and best-selling products using SQL and Excel.</p>
+    </div>
+
+    <div class="project-card">
+      <h3>HR Analytics</h3>
+      <p>Performed attrition analysis and created Tableau dashboards.</p>
+    </div>
+  </section>
+
+  <!-- CONTACT -->
+  <section class="contact">
+    <h2>Contact</h2>
+    <p>Email: arjunverma.work@gmail.com</p>
+    <p>LinkedIn: linkedin.com/in/arjunverma015</p>
+  </section>
+
+  <script src="script.js"></script>
+</body>
+</html>
 
